# opensteer-cloud-cli

./: Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
src/: browser_profiles.rs  claim.rs  local_browser.rs  main.rs  snapshot.rs
