[package]
name = "opensteer-cloud"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Host CLI for controlling Opensteer Cloud agent workspaces."
license = "MIT"
homepage = "https://opensteer.com"
repository = "https://github.com/steerlabs/opensteer-cloud-cli"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
flate2 = "1"
fs4 = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
base64 = "0.22"
tungstenite = "0.28"
ureq = "3"
